{
    "translation": {
        "Atividades": "Activities",
        "Eventos": "Events",
        "Centro Estético": "Esthetic Center",
        "Perfil": "Profile",
        "Espaços": "Space",
        "Sair": "Logout",
        "Idioma": "Language",
        "Meus dados": "My data",
        "Exames" : "Exams",
        "Configurações": "Settings",
        "Populares para você" : "Popular for you",
        "Todas as atividades" : "All activities",
        "Todos eventos": "All events",
        "Lanchonete" : "Cafeteria",
        "Quadras" : "Multi-Sports Court's",
        "Quiosques" : "Kiosks",
        "Outras atividades" : "Other activities",
        "Últimos eventos" : "Last events",
        "Últimas reservas" : "Last reservations",
        "Procurar atividades" : "Search activities",        
        "Procurar eventos" : "Search events",
        "Procurar procedimentos" : "Search procedures",
        "Cancelamento realizado com sucesso!" : "Successfully canceled",
        "Não existem eventos ou horários disponíveis para essa data." : "There are no events or schedules available for this date.",        
        "Cancelar" : "Cancel",
        "Agendar" : "Schedule",
        "Selecione o profissional" : "Select the professional",
        "Semana" : "Week",
        "Mês" : "Month",
        "Ano" : "Year",
        "Total Atividades" : "Total activities",        
        "Histórico" : "History",
        "Agendadas" : "Scheduled",
        "Deseja realmente cancelar esta reserva?" : "Do you really want to cancel this reservation?",
        "Deseja realmente cancelar a atividade?": "Do you really want to cancel the activity?",
        "Deseja realmente cancelar o seu agendamento?" : "Do you really want to cancel your schedule?",
        "Você precisa aceitar os termos de uso para continuar o agendamento." : "You must accept the terms of use to continue the schedule.",
        "Você deve aceitar os termos de uso para continuar o agendamento." : "You must accept the terms of use to continue the schedule.",
        "Li e concordo com os termos e condições de uso." : "I accept the terms and conditions of use.",
        "Senha obrigatória" : "Password required",
        "Senha deve ter no mínimo 6 caracteres" : "Password must have at least 6 characters",
        "As senhas não conferem" : "Passwords do not match",
        "Sua senha foi alterada com sucesso!" : "Your password was changed successfully!",
        "Não foi possível alterar a senha" : "Could not change password",
        "Confirmar senha" : "Confirm password",
        "Nova senha" : "New password",
        "Senha anterior" : "Old password",
        "Associado Adulto" : "Adult Member",
        "Associado Infantil" : "Children's Member",
        "Adulto" : "Adult",
        "Infantil" : "Children",
        "Eu quero" : "I want",
        "Total" :  "Total",
        "Vagas Disponíveis" : "Available seats",
        "Informações" : "Information",
        "Ocorreu um erro ao realizar sua reserva, tente novamente mais tarde." : "An error occurred while making your reservation, please try again later.",
        "Reservar" : "Reserve",
        "Selecione a atividade" : "Select the activity",
        "Para selecionar uma imagem você precisa conceder permissão." : "To select an image you must grant permission.",
        "Selecione uma atividade" : "Select an activity",
        "Selecione uma imagem" : "Select an image",
        "Anexo adicionado com sucesso" : "Attachment added successfully",
        "Erro ao adicionar anexo" : "Error adding attachment",
        "Nenhuma foto" : "No image",
        "carregada" : "loaded",
        "Carregar Exame" : "Load Exam",
        "Não definido" :   "Not defined",
        "Aguardando" : "Waiting",
        "Recusado" : "Rejected",
        "Autorizado" : "Authorized",
        "Anexar Exame" : "Attach Exam",
        "O campo é obrigatório" : "The field is required",
        "Verifique seu e-mail para recuperar sua senha" : "Check your e-mail to recover your password",
        "Usuário não encontrado" :  "User not found",
        "Erro ao atualizar foto de perfil" :    "Error updating profile picture",
        "Perfil atualizado com sucesso!" : "Profile updated successfully!",
        "Não foi possivel editar seu perfil" : "Could not edit your profile",
        "Nome" : "Name",
        "Data de Nascimento" : "Date of Birth",
        "Celular" : "Cellphone",
        "Realmente deseja cancelar esta reserva?" : "Do you really want to cancel this reservation?",
        "Trocar senha" : "Change password",
        "Senha" : "Password",
        "Entrar" : "Login",
        "Registrar" : "Singup",
        "Esqueceu sua senha?" : "Forgot your password?",
        "Algo deu errado!" : "Something went wrong!",
        "Todos os itens" : "All items",
        "Horários e Contatos" : "Schedules and Contacts",
        "Nenhum treino cadastrado" : "No training registered",
        "Selecione seu treino" : "Select your training",
        "Regra de funcionamento": "Operating rule",
        "Não existem horários disponíveis para essa data.": "There are no schedules available for this date.",

        "Trocar Senha" : "Change Password",
        "Pagamentos" : "Payments",
        "Meus Dados":   "My Data",
        "Detalhe": "Detail",


        "Procurar" : "Search",
        "Selecionar" : "Select",
        "Selecione" : "Select",
        "reservado": "reserved",
        "Escolha o espaço desejado": "Choose the desired space",
        "Aceitar" : "Accept",
        "Sucesso" : "Success",
        "Erro" : "Error",
        "Salvar" : "Save",
        "Alterar" : "Change",
        "Enviar" :  "Send",
        "Voltar" : "Back",   
        "Fechar" : "Close"
    }
}