...
import { Settings } from '../screens/Settings'
import { SnackBar } from '../screens/SnackBar'
import { Payment } from '../screens/Payment'
import { Profile } from '../screens/Profile'
import { Events } from '../screens/Events'
import { Snack } from '../screens/Snack'
import { Home } from '../screens/Home'
import { Exams } from '../screens/Exams'
import { Language } from '../screens/Language'
import { Squares } from '../screens/Squares'
import { Kiosks } from '../screens/Kiosks'
import { Partnerships } from '../screens/Partnerships'
import { OtherActivitiesWithoutAppointments } from '../screens/OtherActivitiesWithoutAppointments'
...
