appId: com.scania.clube
---
- launchApp
- assertVisible: "Espaços"
- tapOn: "Espaços"
- tapOn: "Agendadas"
- tapOn: "Cancelar"
- tapOn: "Confirmar"
- assertVisible: "Histórico"
